--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,6 @@ MONGODB_URI= "mongodb+srv://user:password@cluster0.frdt82y.mongodb.net"
 CLOUDINARY_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_SECRET_KEY=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+JWT_SECRET=
